feat(wallet api): add more api to wallet
